Fix form content overflowing out of screen
- the form couldn't be scrolled if the content of the
form overflowed the height of the screen. Fixed.

--- a/style.css
+++ b/style.css
@@ -467,7 +467,7 @@ appearance: none;
 
 .sidebar:has(#book-toggle:checked) .form-wrapper {
     position: fixed;
-    overflow: hidden;
+    overflow: auto;
     height: calc(100svh - var(--header-height));
     width: var(--sidebar-width);
     padding-block: var(--padding-large);
